# demo

./: .gitignore  .gitmodules  README.md
device/: .gitignore  CMakeLists.txt  README.md  make_merged_bin.sh  partitions.csv  sdkconfig.defaults.esp32s3
device/main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.c  sampling.c  sampling.h
device/main/driver/esp32/: button.c  factory_data.c  interface_bridge.c  lwm2m_client.c  prov.c  udp_wrapper.c
device/main/driver/include/: button.h  factory_data.h  interface_bridge.h  lwm2m_client.h  prov.h  udp_wrapper.h
device/main/lwm2m/: object_button.c  object_button.h  object_device.c  object_device.h  object_i2c.c  object_interface.h  object_interface_base.c  object_interface_base.h  object_log.c  object_log.h  object_rs485.c  object_sample.c  object_sample.h  object_script.c  object_script.h  object_uart.c
device/main/proto/: factory_data.options  factory_data.pb.c  factory_data.pb.h  factory_data.proto
server/: .dockerignore  .gitignore  Dockerfile  README.md  log.txt  pom.xml
server/.github/workflows/: docker-release.yml
server/shared/src/plugins/: dialog.js
server/src/main/resources/: application.yaml  schema.sql
server/webapp/: OBJECTSPECS_API.md  OBJECTSPECS_IMPLEMENTATION.md  OBJECTSPECS_QUICK_REF.md  models  package-lock.json  package.json  pnpm-lock.yaml  setup-models-link.sh  test-xml-parser.js  vite.config.js
server/webapp/api/: lwm2m-xml-parser.js  objectspecs.js
server/webapp/src/components/: ObjectSpecsBrowser.vue
server/webapp/src/js/: objectspecs-api.js
(+40 files in other folders)
